--- a/index.html
+++ b/index.html
@@ -70,7 +70,7 @@
         </div>
       </section>
 
-      <section>
+      <section class="section-peculiarities">
         <div class="container">
           <h2 class="title-second-section">Peculiarities</h2>
           <ul class="list-description">
