--- a/index.html
+++ b/index.html
@@ -74,7 +74,7 @@
         <div class="container">
           <h2 class="title-second-section">Peculiarities</h2>
           <ul class="list-description">
-            <li>
+            <li class="list-description-element">
               <h3 class="title-of-peculiaritie">Strategy</h3>
               <p class="dscr-of-peculiaritie">
                 Our goal is to identify the business problem to walk away with
