--- a/index.html
+++ b/index.html
@@ -81,21 +81,21 @@
                 the perfect and creative solution.
               </p>
             </li>
-            <li class="title-second-section">
+            <li class="list-description-element">
               <h3 class="title-of-peculiaritie">Punctuality</h3>
               <p class="dscr-of-peculiaritie">
                 Bring the key message to the brand's audience for the best price
                 within the shortest possible time.
               </p>
             </li>
-            <li class="title-second-section">
+            <li class="list-description-element">
               <h3 class="title-of-peculiaritie">Diligence</h3>
               <p class="dscr-of-peculiaritie">
                 Research and confirm brands that present the strongest digital
                 growth opportunities and minimize risk.
               </p>
             </li>
-            <li class="title-second-section">
+            <li class="list-description-element">
               <h3 class="title-of-peculiaritie">Technologies</h3>
               <p class="dscr-of-peculiaritie">
                 Design practice focused on digital experiences. We bring forth a
