--- a/index.html
+++ b/index.html
@@ -112,40 +112,48 @@
           <h2 class="our-team-title">Our Team</h2>
           <ul class="team-list">
             <li class="img-our-team">
-              <img
-                src="./images/Mark_Guerrero.jpg"
-                width="264"
-                alt="foto Mark Guerrero.Product Designer "
-              />
-              <h3 class="command-structure">Mark Guerrero</h3>
-              <p class="profession">Product Designer</p>
+              <div class="personal-card">
+                <img
+                  src="./images/Mark_Guerrero.jpg"
+                  width="264"
+                  alt="foto Mark Guerrero.Product Designer "
+                />
+                <h3 class="command-structure">Mark Guerrero</h3>
+                <p class="profession">Product Designer</p>
+              </div>
             </li>
             <li class="img-our-team">
-              <img
-                src="./images/Tom_Ford.jpg"
-                width="264"
-                alt="foto Tom Ford. Frontend Developer"
-              />
-              <h3 class="command-structure">Tom Ford</h3>
-              <p class="profession">Frontend Developer</p>
+              <div class="personal-card">
+                <img
+                  src="./images/Tom_Ford.jpg"
+                  width="264"
+                  alt="foto Tom Ford. Frontend Developer"
+                />
+                <h3 class="command-structure">Tom Ford</h3>
+                <p class="profession">Frontend Developer</p>
+              </div>
             </li>
             <li class="img-our-team">
-              <img
-                src="./images/Camila_Garcia.jpg"
-                width="264"
-                alt="foto Camila Garcia. Marketing"
-              />
-              <h3 class="command-structure">Camila Garcia</h3>
-              <p class="profession">Marketing</p>
+              <div class="personal-card">
+                <img
+                  src="./images/Camila_Garcia.jpg"
+                  width="264"
+                  alt="foto Camila Garcia. Marketing"
+                />
+                <h3 class="command-structure">Camila Garcia</h3>
+                <p class="profession">Marketing</p>
+              </div>
             </li>
             <li class="img-our-team">
-              <img
-                src="./images/Daniel_Wilson.jpg"
-                width="264"
-                alt="Foto Daniel Wilson. UI Designer"
-              />
-              <h3 class="command-structure">Daniel Wilson</h3>
-              <p class="profession">UI Designer</p>
+              <div class="personal-card">
+                <img
+                  src="./images/Daniel_Wilson.jpg"
+                  width="264"
+                  alt="Foto Daniel Wilson. UI Designer"
+                />
+                <h3 class="command-structure">Daniel Wilson</h3>
+                <p class="profession">UI Designer</p>
+              </div>
             </li>
           </ul>
         </div>
