--- a/index.html
+++ b/index.html
@@ -170,8 +170,10 @@
                 width="360"
                 alt="image_banking_app"
               />
-              <h3 class="service-name">Banking App</h3>
-              <p class="type-of-service">App</p>
+              <div class="aplication">
+                <h3 class="service-name">Banking App</h3>
+                <p class="type-of-service">App</p>
+              </div>
             </li>
             <li class="img-our-portfolio">
               <img
@@ -179,8 +181,10 @@
                 width="360"
                 alt="image_Cashless_Payment"
               />
-              <h3 class="service-name">Cashless Payment</h3>
-              <p class="type-of-service">Marketing</p>
+              <div class="aplication">
+                <h3 class="service-name">Cashless Payment</h3>
+                <p class="type-of-service">Marketing</p>
+              </div>
             </li>
             <li class="img-our-portfolio">
               <img
@@ -188,8 +192,10 @@
                 width="360"
                 alt="image_Meditation_App"
               />
-              <h3 class="service-name">Meditation App</h3>
-              <p class="type-of-service">App</p>
+              <div class="aplication">
+                <h3 class="service-name">Meditation App</h3>
+                <p class="type-of-service">App</p>
+              </div>
             </li>
             <li class="img-our-portfolio">
               <img
@@ -197,8 +203,10 @@
                 width="360"
                 alt="foto_Taxi_Service"
               />
-              <h3 class="service-name">Taxi Service</h3>
-              <p class="type-of-service">Marketing</p>
+              <div class="aplication">
+                <h3 class="service-name">Taxi Service</h3>
+                <p class="type-of-service">Marketing</p>
+              </div>
             </li>
             <li class="img-our-portfolio">
               <img
@@ -206,8 +214,10 @@
                 width="360"
                 alt="image_Screen_Illustrations"
               />
-              <h3 class="service-name">Screen Illustrations</h3>
-              <p class="type-of-service">Design</p>
+              <div class="aplication">
+                <h3 class="service-name">Screen Illustrations</h3>
+                <p class="type-of-service">Design</p>
+              </div>
             </li>
             <li class="img-our-portfolio">
               <img
@@ -215,8 +225,10 @@
                 width="360"
                 alt="image_Online_Courses"
               />
-              <h3 class="service-name">Online Courses</h3>
-              <p class="type-of-service">Marketing</p>
+              <div class="aplication">
+                <h3 class="service-name">Online Courses</h3>
+                <p class="type-of-service">Marketing</p>
+              </div>
             </li>
           </ul>
         </div>
