--- a/index.html
+++ b/index.html
@@ -72,7 +72,7 @@
 
       <section class="section-peculiarities">
         <div class="container">
-          <h2 hidden class="title-second-section">Peculiarities</h2>
+          <h2 class="title-second-section visually-hidden">Peculiarities</h2>
           <ul class="list-description">
             <li class="list-description-element">
               <h3 class="title-of-peculiaritie">Strategy</h3>
